[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://third_party/kenney/particlePack/smoke_07.png" type="Texture" id=2]
[ext_resource path="res://enemies/enemy.gd" type="Script" id=3]
[ext_resource path="res://common/Stats.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.260024 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Enemy" type="Node2D"]
position = Vector2( 120, -8 )
script = ExtResource( 3 )

[node name="Body" type="KinematicBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
z_index = -10
frames = SubResource( 2 )

[node name="HitboxShape" type="CollisionShape2D" parent="Body"]
unique_name_in_owner = true
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="Body"]
collision_layer = 4
collision_mask = 3

[node name="HurtboxShape" type="CollisionShape2D" parent="Body/Hurtbox"]
unique_name_in_owner = true
shape = SubResource( 4 )

[node name="TransformAdjust" type="Node2D" parent="Body"]
rotation = 3.14159

[node name="BulletsSpawner" type="Node2D" parent="Body/TransformAdjust"]
unique_name_in_owner = true

[node name="Stats" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
health = 10.0

[node name="DeathParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
scale = Vector2( 0.317009, 0.317009 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
randomness = 0.17
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity = 1111.97
initial_velocity_random = 0.24
damping = 58.48
color = Color( 1, 1, 1, 0.427451 )
color_ramp = SubResource( 5 )

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="area_shape_entered" from="Body/Hurtbox" to="." method="_on_area_shape_entered"]
[connection signal="on_zero_health" from="Stats" to="." method="_on_zero_health"]
